--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,18 @@ button {
   padding: 10px 20px;
   font-size: 16px;
 }
+
+
+#contextmenu{
+  display:none;
+  position:fixed;
+  left:0px;
+  top:0px;
+  width:200px;
+  height:100px;
+  border:1px solid #000;
+  background-color:#fff;
+}
+#contextmenu li{
+  cursor:pointer;
+}
