--- a/client/public/index.css
+++ b/client/public/index.css
@@ -1,4 +1,4 @@
-/* src/index.css */
+/* src/public.css */
 html, body, #root {
   margin: 0;
   padding: 0;
@@ -20,16 +20,4 @@ button {
 }
 
 
-#contextmenu{
-  display:none;
-  position:fixed;
-  left:0px;
-  top:0px;
-  width:200px;
-  height:100px;
-  border:1px solid #000;
-  background-color:#fff;
-}
-#contextmenu li{
-  cursor:pointer;
-}
+
