--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,5 +19,12 @@ button {
   font-size: 16px;
 }
 
+.sample-inout{
+  display: flex;
+  gap: 1rem;
+  background-color: #f8f8f8;
+  border: 2px solid #ccc;
+  margin: 10px;
+}
 
 
